Fixed vertical alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -13,6 +13,7 @@
 
 .time-label {
     text-align: right;
+    display: flex;
     vertical-align: middle;
     padding: 2px 8px;
     box-sizing: border-box;
